--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -11,7 +11,21 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --space-sm: 5px;
+  --space-md: 10px;
+  --space-lg: 30px;
+
+  --color-gray: rgb(136, 136, 136);
 }
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+/* global elements */
 
 a {
   font-weight: 500;
@@ -20,6 +34,9 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+a.active {
+  text-decoration: underline;
 }
 
 body {
@@ -35,46 +52,11 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.form-control {
-  margin-bottom: 30px;
-}
-.form-control > label:first-of-type {
-  display: block;
-  margin-bottom: 10px;
-  font-weight: bold;
-}
-.form-control > .checkbox-label {
-  display: block;
-  margin-bottom: 5px;
-  cursor: pointer;
-}
-.form-control > .checkbox-label > input {
-  margin-right: 10px;
-}
-
 .player-score-inputs {
-  margin-bottom: 5px;
+  margin-bottom: var(--space-sm);
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 60% 40%;
+  gap: var(--space-md);
 }
 
 @media (prefers-color-scheme: light) {
