--- a/apps/web/src/styles/header.css
+++ b/apps/web/src/styles/header.css
@@ -5,10 +5,18 @@ header {
   right: 0px;
   display: flex;
   justify-content: center;
-  padding: var(--space-lg);
+  padding: var(--space-md);
 }
 
 header > nav {
   display: flex;
   gap: var(--space-lg);
+  padding: var(--space-md) var(--space-lg);
+  border-radius: 10px;
+  background-color: #1d1d1d;
+  box-shadow: #646cff33 0 0 10px;
+}
+
+header > nav > a {
+  cursor: pointer;
 }
