--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -4,6 +4,7 @@
   --space-md: 10px;
   --space-lg: 30px;
 
+  --brand-primary: #686fff;
   --color-gray: rgb(136, 136, 136);
   --dark-gray: #242424;
 
@@ -32,11 +33,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--brand-primary);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  filter: brightness(130%);
 }
 a.active {
   text-decoration: underline;
@@ -51,8 +52,12 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
+}
+
+.highlight {
+  color: var(--brand-primary);
 }
 
 .player-score-inputs {
