--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -26,7 +26,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  padding-top: 65px;
+  padding-top: 80px;
+  cursor: pointer;
 }
 
 /* global elements */
