plays by month chart

--- a/apps/web/src/styles/form.css
+++ b/apps/web/src/styles/form.css
@@ -18,3 +18,8 @@
 .form-control > .checkbox-label > input {
   margin-right: var(--space-md);
 }
+
+input, select {
+  font-size: 1em;
+  padding: var(--space-sm)
+}
