--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -50,6 +50,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-size: 16px;
 }
 
 h1 {
@@ -66,6 +67,10 @@ h1 {
   display: grid;
   grid-template-columns: 60% 40%;
   gap: var(--space-md);
+}
+
+.bar-chart {
+  margin-bottom: var(--space-md);
 }
 
 @media (prefers-color-scheme: light) {
