more stats, and testing

--- a/apps/web/src/styles/header.css
+++ b/apps/web/src/styles/header.css
@@ -12,7 +12,7 @@ header > nav {
   display: flex;
   gap: var(--space-lg);
   padding: var(--space-md) var(--space-lg);
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   background-color: #1d1d1d;
 }
 
