--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -25,10 +25,11 @@
 }
 
 #root {
-  max-width: 1280px;
+  max-width: 400px;
   margin: 0 auto;
   padding: 2rem;
   padding-top: 80px;
+  width: 100%;
 }
 
 /* global elements */
@@ -52,15 +53,6 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-size: 16px;
-}
-
-h1 {
-  font-size: 2em;
-  line-height: 1.1;
-}
-
-.highlight {
-  color: var(--brand-primary);
 }
 
 .player-score-inputs {
