--- a/apps/web/src/styles/utilities.css
+++ b/apps/web/src/styles/utilities.css
@@ -5,9 +5,8 @@
 .space-between {
   justify-content: space-between;
 }
-
-.text-muted {
-  color: var(--color-gray)
+.h-centered {
+  justify-content: center;
 }
 
 .mb-0 {
