--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -7,4 +7,6 @@
 @import 'table.css';
 @import 'players.css';
 @import 'stat-card.css';
-@import 'game-weight';
+@import 'pill';
+
+@import 'game-details';
