--- a/apps/web/src/styles/table.css
+++ b/apps/web/src/styles/table.css
@@ -1,7 +1,7 @@
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: var(--space-lg);
+  /* margin-bottom: var(--space-lg); */
   --table-x-gap: 20px;
   --table-y-gap: 7px;
 }
