--- a/apps/web/src/styles/calendar-graph.css
+++ b/apps/web/src/styles/calendar-graph.css
@@ -1,20 +1,27 @@
 /* override table styles */
 table.calendar-graph {
   width: auto;
+  border-spacing: 2px;
+  border-collapse: separate;
 }
 
 .calendar-graph td {
   width: 10px;
   padding: 0;
   border-width: 0;
+  border-spacing: 1px;
+  border-radius: 2px;
 }
 .calendar-graph tr {
   height: 10px;
 }
 
+.calendar-graph td.day-none {
+  background-color: rgba(255, 255, 255, 0.03);
+}
 .calendar-graph td.day-one {
-  background-color: rgb(0, 65, 0);
+  background-color: rgba(0, 128, 0, 0.3);
 }
 .calendar-graph td.day-many {
-  background-color: green;
+  background-color: rgba(0, 128, 0, 1);
 }
