--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -7,6 +7,7 @@
 @import 'table.css';
 @import 'players.css';
 @import 'stat-card.css';
+@import 'goal-card.css';
 @import 'pill';
 
 @import 'game-details';
