added winrates to most played games

--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -5,6 +5,7 @@
   --border-radius: 10px;
 
   --brand-primary: #686fff;
+  --brand-muted: #6870ff5e;
   --color-gray: rgb(136, 136, 136);
   --dark-gray: #242424;
   --dark-gray-accent: #383838;
