removed large text on detailed stat card, looks weird

--- a/apps/web/src/styles/stat-card.css
+++ b/apps/web/src/styles/stat-card.css
@@ -46,6 +46,6 @@
   text-align: left;
 }
 .detailed-stat-card > div > span:last-child {
-  font-size: 1.3em;
+  /* font-size: 1.3em; */
   text-align: left;
 }
