--- a/apps/web/src/styles/root.css
+++ b/apps/web/src/styles/root.css
@@ -12,6 +12,7 @@
   --color-gray: rgb(136, 136, 136);
   --dark-gray: #242424;
   --dark-gray-accent: #303030;
+  --color-danger: #b75151;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -55,6 +56,9 @@ a:hover {
 }
 a.active {
   text-decoration: underline;
+}
+a.danger {
+  color: var(--color-danger);
 }
 
 .link-list {
