added unique games played goal, better loading animation

--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -1,6 +1,7 @@
 @import 'root';
 @import 'typography';
 @import 'utilities';
+@import 'loading';
 @import 'header';
 @import 'button';
 @import 'form';
